<resources>
    <string name="app_name">Dealat</string>
    <string name="wait">Please wait..</string>
    <string name="connection_problem">There seems a problem with your internet connection, please check your network and retry.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="or">Or</string>
    <string name="arabic">عربي</string>
    <string name="english">English</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="statusPending">Pending</string>
    <string name="statusAccepted">Accepted</string>
    <string name="statusExpired">Expired</string>
    <string name="statusDeleted">Deleted</string>
    <string name="statusHidden">Hidden</string>
    <string name="statusRejected">Rejected</string>
    <string name="labelAdStatus">Ad Status</string>
    <string name="labelRejectReason">Rejection Reason</string>
    <string name="all">All</string>
    <string name="allCategories">All Categories</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="expires">Expires</string>
    <string name="expired">Expired</string>
    <string name="published">Published</string>
    <string name="created">Created</string>
    <string name="newU">New</string>
    <string name="old">Old</string>
    <string name="manual">Manual</string>
    <string name="sp">SP</string>
    <string name="refresh">Refresh</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="ad">Ads</string>
    <string name="view">View</string>
    <string name="version">Version</string>
    <string name="selectImages">You can attach</string>
    <string name="images">images with your ad</string>
    <string name="alsoSelectVideo">and you can attach a video as well.</string>
    <string name="labelPleaseSelectLang">Please, Select your language</string>
    <string name="labelPleaseSelectCity">Please, Select your city</string>
    <string name="labelSelectCity">Select a city</string>
    <string name="labelGender">Gender</string>
    <string name="labelchooseCategory">Choose a Category</string>
    <string name="labelNegotiable">Negotiable</string>
    <string name="labelSecondhand">Secondhand</string>
    <string name="labelFeatured">Featured</string>
    <string name="labelAutomatic">Automatic</string>
    <string name="labelWithFurn">With Furniture</string>
    <string name="labelSelectBrand">Select Brand</string>
    <string name="labelSelectModel">Select Model</string>
    <string name="labelSelectEdu">Select Education</string>
    <string name="labelSelectCertificate">Select Certificate</string>
    <string name="labelSelectSch">Select Schedule</string>
    <string name="labelSelectManufactureYear">Select Manufacturing Year</string>
    <string name="labelSelectEngineCapacity">Select Engine Capacity</string>
    <string name="labelShowPeriod">Show Period</string>
    <string name="labelTo">To</string>
    <string name="labelFrom">From</string>
    <string name="labelSelectTransmission">Select Transmission Type</string>
    <string name="labelFurnished">Furnished</string>
    <string name="labelProfileImage">Profile Image</string>
    <string name="labelSelectImage">Select Image</string>
    <string name="labelRemoveImage">Remove Image</string>
    <string name="labelReport">Report an ad</string>
    <string name="labelPaidFeature">This feature is paid. If you want your ad to be featured, enable it, and Admin will contact you.</string>
    <string name="labelAgree">I have read and agree to the</string>
    <string name="labelTerms">Terms of Dealat</string>
    <string name="labelShowPhone">Show phone number</string>
    <string name="labelOnlyToRegistered">Your phone number will be shown with this ad\'s details</string>
    <string name="labelVerifySms">Please, enter verification code, sent through SMS to</string>
    <string name="labelGoTo">1. Go to</string>
    <string name="labelVisit">on your computer, and scan the QR code</string>
    <string name="labelScanQr">2. Enter PIN that will be shown on your mobile</string>
    <string name="labelRegister">You\'re not registered yet, Would you like to register?</string>
    <string name="labelVerify">Your account isn\'t verified, Would you like to verify it?</string>
    <string name="labelNumberConfirm">Is your phone number correct?</string>
    <string name="labelAdNumber">Ad Number</string>
    <string name="labelCity">City</string>
    <string name="labelLocation">Area</string>
    <string name="labelTitle">Title</string>
    <string name="labelBrand">Brand</string>
    <string name="labelModel">Model</string>
    <string name="labelKilo">Kilometer</string>
    <string name="labelManufactureYear">Manufacturing Year</string>
    <string name="labelEngineCapacity">Engine Capacity</string>
    <string name="labelTransmission">Transmission Type</string>
    <string name="labelState">State</string>
    <string name="labelPropertyState">Finishing type</string>
    <string name="labelSpace">Space</string>
    <string name="labelRoom">Number of Rooms</string>
    <string name="labelFloor">Floor</string>
    <string name="labelNumberFloors">Number of Floors</string>
    <string name="labelEdu">Education</string>
    <string name="labelCertificate">Certificate</string>
    <string name="labelSchedule">Schedule</string>
    <string name="labelExperience">Experience</string>
    <string name="labelSalary">Salary</string>
    <string name="labelSize">Size</string>
    <string name="labelSearchText">Search text</string>
    <string name="labelCategory">Category</string>
    <string name="labelPriceFrom">Price: From</string>
    <string name="labelPriceTo">Price: To</string>
    <string name="labelSpaceFrom">Space: From</string>
    <string name="labelSpaceTo">Space: To</string>
    <string name="labelRoomFrom">Number of Rooms: From</string>
    <string name="labelRoomTo">Number of Rooms: To</string>
    <string name="labelFloorFrom">Floor: From</string>
    <string name="labelFloorTo">Floor: To</string>
    <string name="labelNumberFloorsFrom">Number of Floors: From</string>
    <string name="labelNumberFloorsTo">Number of Floors: To</string>
    <string name="labelSalaryFrom">Salary: From</string>
    <string name="labelSalaryTo">Salary: To</string>
    <string name="labelKiloFrom">Kilometer: From</string>
    <string name="labelKiloTo">Kilometer: To</string>
    <string name="labelCapacityFrom">Engine Capacity: From</string>
    <string name="labelCapacityTo">Engine Capacity: To</string>
    <string name="labelSizeFrom">Size: From</string>
    <string name="labelSizeTo">Size: To</string>
    <string name="labelListEmpty">This list is empty!</string>
    <string name="hintPhone">Mobile Phone Number</string>
    <string name="hintName">Name</string>
    <string name="hintEmail">Email address</string>
    <string name="hintWhatsapp">WhatsApp Number</string>
    <string name="hintBirthday">Birthday</string>
    <string name="hintVerificationCode">Verification Code</string>
    <string name="hintChooseLocation">Choose an Area</string>
    <string name="hintSearch">Search</string>
    <string name="hintTitle">Title</string>
    <string name="hintDesc">Description...</string>
    <string name="hintPrice">Price (SP)</string>
    <string name="hintExperience">Experience</string>
    <string name="hintSize">Size</string>
    <string name="hintKilometer">Kilometers</string>
    <string name="hintSpace">Space</string>
    <string name="hintRooms">Number of Rooms</string>
    <string name="hintFloors">Floor</string>
    <string name="hintNumberFloors">Number of Floors</string>
    <string name="hintState">State</string>
    <string name="hintSalary">Salary (SP)</string>
    <string name="hintWriteMsg">Write your message...</string>
    <string name="buttonRegister">Register</string>
    <string name="buttonSkip">Skip</string>
    <string name="buttonVerify">Verify</string>
    <string name="buttonReRequestCode">Resend code</string>
    <string name="buttonSell">Submit your ad for free</string>
    <string name="buttonTakePhoto">Take a photo</string>
    <string name="buttonDone">Done</string>
    <string name="buttonCancel">Cancel</string>
    <string name="buttonSubmit">Submit</string>
    <string name="buttonMarkAsMain">Mark as main</string>
    <string name="buttonDelete">Delete</string>
    <string name="buttonBack">Back</string>
    <string name="buttonFilter">Filter</string>
    <string name="buttonShow">Show</string>
    <string name="buttonSave">Save</string>
    <string name="buttonSend">Send</string>
    <string name="buttonReport">Report</string>
    <string name="buttonContinue">Continue</string>
    <string name="buttonView">View</string>
    <string name="buttonDeactivate">Deactivate Account</string>
    <string name="tabMyAds">My Ads</string>
    <string name="tabFav">Favorites</string>
    <string name="tabChats">Chats</string>
    <string name="navHome">Home</string>
    <string name="shareApp">Share App</string>
    <string name="navSavedSearches">Saved Searches</string>
    <string name="navLanguage">Language</string>
    <string name="navSettings">Settings</string>
    <string name="navLogout">Logout</string>
    <string name="navAbout">About App</string>
    <string name="navHelp">Help</string>
    <string name="navQr">Scan QR code</string>
    <string name="opt_details">Ad\'s details</string>
    <string name="errorRequired">This field is required</string>
    <string name="errorCodeLenght">Code must have 6 digits</string>
    <string name="errorPhoneLength">Phone number must have 9 digits</string>
    <string name="errorHomeNumber">Please enter a Mobile phone number</string>
    <string name="errorCategory">Category can\'t be changed!</string>
    <string name="errorAgreeToTerms">You must agree to Dealat terms!</string>
    <string name="toastAdSubmit">Ad submitted, and it\'s waiting for admin approval</string>
    <string name="toastFavorite">Ad added to your favorites</string>
    <string name="toastUnfavorite">Ad removed from your favorites</string>
    <string name="toastAdReported">Ad reported</string>
    <string name="toastBookmark">Search Saved</string>
    <string name="toastUnBookmark">Search Removed</string>
    <string name="toastSaved">Changes Saved</string>
    <string name="toastAdDeleted">Ad Deleted</string>
    <string name="toastImageSave">Image saved to gallery</string>
    <string name="toastThnxRating">Thanx for rating</string>
    <string name="toastMaxImages">You can\'t select more images</string>
    <string name="toastWaitTillUploading">Please wait till images are uploaded!</string>
    <string name="toastWaitTillVideoUploading">Please wait till video is uploaded</string>
    <string name="toastSelectImage">Please, select one image at least</string>
    <string name="toastRegister">You need to register first!</string>
    <string name="toastVerify">You need to verify your number first!</string>
    <string name="toastSelectReport">Please, Select reporting reason</string>
    <string name="toastUploadError">Image wasn\'t uploaded!</string>
    <string name="toastUploadVideoError">Video wasn\'t uploaded!</string>
    <string name="commercial_has_no_link_message">We are sorry this commercial has no link to it.</string>
    <string name="areYouSureDiscard">Are you sure you want to discard this ad?</string>
    <string name="areYouSureRegister">You\'ve registered from a different device previously, Do you want to keep registration from both devices?</string>
    <string name="areYouSureEdit">Your ad will be pending again until Admin accepts the changes, Are you sure you want to edit it?</string>
</resources>