<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/navHome" />
        <item
            android:id="@+id/share_app"
            android:title="@string/shareApp" />
        <item
            android:id="@+id/nav_MyAds"
            android:title="@string/tabMyAds"
            android:visible="false"
            />
        <item
            android:id="@+id/nav_Fav"
            android:title="@string/tabFav"
            android:visible="false"
            />
        <item
            android:id="@+id/nav_Chats"
            android:title="@string/tabChats"
            android:visible="false"
            />

        <item
            android:id="@+id/nav_savedSearches"
            android:title="@string/navSavedSearches"
            android:visible="false"
            />

        <item
            android:id="@+id/nav_qrCode"
            android:title="@string/navQr"
            android:visible="false"
            />
    </group>


    <group android:id="@+id/container"
        >
        <item
            android:id="@+id/navLang"
            android:title="@string/navLanguage"
            >
            <menu>
                <item android:id="@+id/navAr"
                    android:title="@string/arabic"/>

                <item android:id="@+id/navEn"
                    android:title="@string/english"/>
            </menu>
        </item>

        <item
            android:id="@+id/navSettings"
            android:title="@string/navSettings"
            android:visible="false"
            />

        <item
            android:id="@+id/navLogout"
            android:title="@string/navLogout"
            android:visible="false"
            />

        <item
            android:id="@+id/navAbout"
            android:title="@string/navAbout"
            />

        <item
            android:id="@+id/navHelp"
            android:title="@string/navHelp"
            android:visible="false"
            />

    </group>

</menu>
