<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_blur"
    android:id="@+id/container2"
    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/container"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="36dp"
            >

            <EditText
                android:id="@+id/editTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hintTitle"
                style="@style/editTextWhite"
                android:backgroundTint="@color/white"
                />

            <EditText
                android:id="@+id/editDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:padding="24dp"
                android:hint="@string/hintDesc"
                style="@style/editTextWhite"
                android:background="@drawable/outline_white"
                />

            <AutoCompleteTextView
                android:id="@+id/autoCompleteLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:completionThreshold="1"
                android:dropDownHeight="140dp"
                android:hint="@string/hintChooseLocation"
                style="@style/editTextWhite"
                android:backgroundTint="@color/white"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/labelShowPeriod"
                android:textColor="@color/white"
                android:textAppearance="@style/textNormal"
                />

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/spinnerPeriod"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                style="@style/Base.Widget.AppCompat.Spinner.Underlined"
                android:backgroundTint="@color/white"
                />

            <EditText
                android:id="@+id/editCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:textIsSelectable="true"
                style="@style/editTextWhite"
                android:backgroundTint="@color/white"
                />

            <EditText
                android:id="@+id/editPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:hint="@string/hintPrice"
                android:inputType="numberDecimal"
                style="@style/editTextWhite"
                android:backgroundTint="@color/white"
                />

            <CheckBox
                android:id="@+id/checkboxNegotiable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/labelNegotiable"
                android:textColor="@color/white"
                />

            <!-- Templates -->

            <TextView
                android:id="@+id/textBrand"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:text="@string/labelSelectBrand"
                android:textColor="@color/white"
                />

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/spinnerBrand"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:visibility="gone"
                style="@style/Base.Widget.AppCompat.Spinner.Underlined"
                android:backgroundTint="@color/white"
                />

            <TextView
                android:id="@+id/textModel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:text="@string/labelSelectModel"
                android:textColor="@color/white"
                />

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/spinnerModel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:visibility="gone"
                style="@style/Base.Widget.AppCompat.Spinner.Underlined"
                android:backgroundTint="@color/white"
                />

            <TextView
                android:id="@+id/textDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:text="@string/labelManufactureYear"
                android:textColor="@color/white"
                />

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/spinnerYear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:visibility="gone"
                style="@style/Base.Widget.AppCompat.Spinner.Underlined"
                android:backgroundTint="@color/white"
                />

            <EditText
                android:id="@+id/editKilo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:visibility="gone"
                android:hint="@string/hintKilometer"
                android:inputType="numberDecimal"
                style="@style/editTextWhite"
                android:backgroundTint="@color/white"
                />

            <CheckBox
                android:id="@+id/checkboxAutomatic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:visibility="gone"
                android:text="@string/labelAutomatic"
                android:textColor="@color/white"
                />

            <!-- -->

            <EditText
                android:id="@+id/editSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:hint="@string/hintSize"
                android:inputType="numberDecimal"
                style="@style/editTextWhite"
                android:backgroundTint="@color/white"
                />

            <!-- -->

            <EditText
                android:id="@+id/editSpace"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:inputType="numberDecimal"
                android:hint="@string/hintSpace"
                style="@style/editTextWhite"
                android:backgroundTint="@color/white"
                />

            <EditText
                android:id="@+id/editRooms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:inputType="number"
                android:hint="@string/hintRooms"
                style="@style/editTextWhite"
                android:backgroundTint="@color/white"
                />

            <EditText
                android:id="@+id/editFloors"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:inputType="number"
                android:hint="@string/hintFloors"
                style="@style/editTextWhite"
                android:backgroundTint="@color/white"
                />

            <EditText
                android:id="@+id/editState"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:visibility="gone"
                android:hint="@string/hintState"
                style="@style/editTextWhite"
                android:backgroundTint="@color/white"
                />

            <CheckBox
                android:id="@+id/checkboxFurn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:visibility="gone"
                android:text="@string/labelWithFurn"
                android:textColor="@color/white"
                />

            <!-- -->

            <TextView
                android:id="@+id/textEdu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:text="@string/labelSelectEdu"
                android:textColor="@color/white"/>

           <android.support.v7.widget.AppCompatSpinner
               android:id="@+id/spinnerEdu"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginBottom="16dp"
               android:visibility="gone"
               style="@style/Base.Widget.AppCompat.Spinner.Underlined"
               android:backgroundTint="@color/white"
               />

            <TextView
                android:id="@+id/textSch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:text="@string/labelSelectSch"
                android:textColor="@color/white"/>

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/spinnerSch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:visibility="gone"
                style="@style/Base.Widget.AppCompat.Spinner.Underlined"
                android:backgroundTint="@color/white"
                />

            <EditText
                android:id="@+id/editEx"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:hint="@string/hintExperience"
                style="@style/editTextWhite"
                android:backgroundTint="@color/white"
                />

            <EditText
                android:id="@+id/editSalary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:visibility="gone"
                android:hint="@string/hintSalary"
                android:inputType="numberDecimal"
                style="@style/editTextWhite"
                android:backgroundTint="@color/white"
                />

            <!-- -->

            <CheckBox
                android:id="@+id/checkboxSecondhand"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:text="@string/labelSecondhand"
                android:textColor="@color/white"
                />
        </LinearLayout>
    </ScrollView>


    <HorizontalScrollView
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_above="@+id/buttonTrue"
        android:padding="4dp"
        android:background="@color/grayTransparent"
        >

        <LinearLayout
            android:id="@+id/layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal"
            />
    </HorizontalScrollView>

    <Button
        android:id="@+id/buttonTrue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:onClick="onClick"
        android:text="@string/buttonSubmit"
        android:textColor="@color/white"
        android:background="@color/red"
        />

</RelativeLayout>