<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/navLanguage"
        android:textAppearance="@style/textHeadline"
        android:textColor="@color/white"
        android:background="@color/red"
        />

    <Button
        android:id="@+id/buttonAr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/arabic"
        android:textAppearance="@style/textNormal"
        android:textColor="@color/grayDark"
        android:background="@null"
        />

    <Button
        android:id="@+id/buttonEn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/english"
        android:textAppearance="@style/textNormal"
        android:textColor="@color/grayDark"
        android:background="@null"
        />

</LinearLayout>