<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_blur"
    >

    <RelativeLayout
        android:id="@+id/container"
        android:layout_width="@dimen/imageViewLarge"
        android:layout_height="@dimen/imageViewLarge"
        android:layout_margin="16dp"
        android:onClick="onClick"
        android:layout_centerHorizontal="true"
        >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/camera_button"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:padding="4dp"
            android:text="@string/buttonTakePhoto"
            android:textColor="@color/white"
            android:background="@color/grayTransparent"
            />
    </RelativeLayout>

    <GridView
        android:id="@+id/gridView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/container"
        android:layout_above="@+id/container2"
        android:layout_margin="4dp"
        android:numColumns="auto_fit"
        android:columnWidth="100dp"
        android:stretchMode="columnWidth"
        android:verticalSpacing="4dp"
        android:horizontalSpacing="4dp"
        android:gravity="center"
        />

    <LinearLayout
        android:id="@+id/container2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/red"
        >

        <Button
            android:id="@+id/buttonTrue"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/buttonDone"
            android:textColor="@color/white"
            android:background="@null"
            />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp"
            android:background="@color/white"
            />

        <Button
            android:id="@+id/buttonFalse"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/buttonCancel"
            android:textColor="@color/white"
            android:background="@null"
            />
    </LinearLayout>

</RelativeLayout>